--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,7 @@ idf_component_register(SRCS "ble_keyboard.c" "led_driver.c"
                             "hid_dev.c"
                             "hid_device_le_prf.c"
                             "hid_host.c"
-                    PRIV_REQUIRES bt usb nvs_flash esp_driver_gpio esp_driver_rmt
+                    PRIV_REQUIRES bt usb nvs_flash esp_driver_gpio esp_driver_rmt app_update
                     INCLUDE_DIRS ".")
 
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-const-variable)
